--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "method-override": "^1.0.0",
     "body-parser": "^1.0.2",
     "express": "^4.0.0",
-    "morgan": "^1.0.0"
+    "morgan": "^1.0.0",
+    "passport": "^0.2.0",
+    "passport-linkedin-oauth2": "^1.1.1",
+    "passport-linkedin": "^0.1.3",
+    "cookie-parser": "^1.0.1",
+    "express-session": "^1.0.3"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
