--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-linkedin-oauth2": "^1.1.1",
     "passport-linkedin": "^0.1.3",
     "cookie-parser": "^1.0.1",
-    "express-session": "^1.0.3"
+    "express-session": "^1.0.3",
+    "request": "^2.34.0"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
