--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
+    "chai": "~1.9.1",
+    "supertest-session": "0.0.1",
     "mocha": "^1.18.2",
     "gulp": "^3.6.1"
   }
