--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "passport-linkedin": "^0.1.3",
     "cookie-parser": "^1.0.1",
     "express-session": "^1.0.3",
-    "request": "^2.34.0"
+    "request": "^2.34.0",
     "neo4j": "~1.1.0",
     "lodash": "~2.4.1"
   },
