--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "morgan": "^1.0.0",
     "passport": "^0.2.0",
     "passport-linkedin-oauth2": "^1.1.1",
-    "passport-linkedin": "^0.1.3",
     "cookie-parser": "^1.0.1",
     "express-session": "^1.0.3",
+    "request": "^2.34.0",
     "neo4j": "~1.1.0",
     "lodash": "~2.4.1"
   },
