--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "~1.9.1",
     "supertest-session": "0.0.1",
     "mocha": "^1.18.2",
-    "gulp": "^3.6.1"
+    "gulp": "^3.6.1",
+    "should": "~3.3.1"
   }
 }
